--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,6 +1,6 @@
+/*App.module.css*/
 .container {
-  font-family: Arial, sans-serif;
   max-width: 1200px;
   margin: 0 auto;
-  padding: 20px;
+  padding: 16px;
 }
