--- a/src/components/MovieCast/MovieCast.module.css
+++ b/src/components/MovieCast/MovieCast.module.css
@@ -1,12 +1,61 @@
-.castList {
+/*MovieCast.module.css*/
+
+.cast {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  padding-left: 0;
+  padding-right: 0;
+}
+
+._gallery_wx23i_1 {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.list {
   list-style: none;
   padding: 0;
+  margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
 }
 
-.castItem {
-  margin-bottom: 10px;
+.item {
+  flex: 0 0 250px;
+  height: 450px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 16px;
+  border-radius: 8px;
+  background-color: #fff;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 }
 
-.castItem p {
+.image {
+  width: 215px;
+  height: 325px;
+  border-radius: 8px;
+  margin-bottom: 8px;
+  object-fit: cover;
+}
+
+.actorInfo {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.actorName {
+  margin: 0;
+}
+
+.actorCharacter {
   margin: 0;
 }
