--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,15 +1,21 @@
+/*Navigation.module.css*/
 .nav {
-  background-color: #333;
-  padding: 10px;
+  display: flex;
+  gap: 16px;
+  padding: 16px;
+  background: linear-gradient(to right, #ff69b4, #6495ed, #a9a9a9);
 }
 
 .link {
-  color: white;
+  color: #007bff;
   text-decoration: none;
-  margin-right: 15px;
+}
+
+.link:hover {
+  text-decoration: underline;
 }
 
 .active {
   font-weight: bold;
-  text-decoration: underline;
+  color: #0056b3;
 }
