--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,7 +1,10 @@
+/*HomePage.module.css*/
 .container {
-  padding: 20px;
+  padding: 16px;
 }
 
 h1 {
-  margin-bottom: 20px;
+  font-size: 2em;
+  margin-bottom: 16px;
+  color: #333;
 }
