--- a/src/pages/NotFoundPage/NotFoundPage.module.css
+++ b/src/pages/NotFoundPage/NotFoundPage.module.css
@@ -1,14 +1,24 @@
+/*NotFoundPage.module.css*/
 .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 16px;
   text-align: center;
-  padding: 20px;
 }
 
-.link {
+h1 {
+  font-size: 2.5em;
   color: #333;
-  text-decoration: none;
-  font-size: 18px;
+  margin-bottom: 16px;
 }
 
-.link:hover {
+a {
+  font-size: 1.2em;
+  color: #007bff;
+  text-decoration: none;
+}
+
+a:hover {
   text-decoration: underline;
 }
