--- a/src/pages/NotFoundPage/NotFoundPage.module.css
+++ b/src/pages/NotFoundPage/NotFoundPage.module.css
@@ -1,4 +1,4 @@
-/*NotFoundPage.module.css*/
+/*src/pages/NotFoundPage/NotFoundPage.module.css*/
 .container {
   display: flex;
   flex-direction: column;
