--- a/src/components/MovieList/MovieList.module.css
+++ b/src/components/MovieList/MovieList.module.css
@@ -1,12 +1,15 @@
-/*MovieList.module.css*/
+/*src/components/MovieList/MovieList.module.css*/
 
 .list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   list-style: none;
   padding: 0;
   margin: 0;
-  display: flex;
-  flex-wrap: wrap;
   gap: 16px;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .item {
@@ -15,7 +18,7 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 16px;
   border-radius: 8px;
-  background-color: #fff;
+  background-color: #f0ffff;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -26,17 +29,12 @@
   transform: scale(1.05);
 }
 
-.item a {
-  color: inherit;
-  text-decoration: none;
-}
-
 .moviePoster {
   width: 215px;
   height: 325px;
   border-radius: 8px;
-  margin-bottom: 8px;
   object-fit: cover;
+  border: 1px solid #ccc;
 }
 
 .movieInfo {
@@ -46,9 +44,12 @@
 }
 
 .movieTitle {
+  font-weight: bold;
+  color: #333;
   margin: 0;
 }
 
 .movieReleaseDate {
+  color: #666;
   margin: 0;
 }
