--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-/*index.css*/
+/*src/index.css*/
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
