--- a/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
+++ b/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
@@ -1,16 +1,19 @@
-/*MovieDetailsPage.module.css*/
+/*src/pages/MovieDetailsPage/MovieDetailsPage.module.css*/
+
 .container {
-  padding: 16px;
+  display: flex;
+  flex-direction: column;
 }
 
 .backButton {
   display: inline-block;
-  margin-bottom: 16px;
+  margin: 16px 0;
   padding: 8px 16px;
   background-color: #007bff;
   color: #fff;
   text-decoration: none;
   border-radius: 4px;
+  width: 100px;
 }
 
 .backButton:hover {
@@ -27,10 +30,32 @@
   border-radius: 8px;
 }
 
+.movieInfo {
+  display: flex;
+  flex-direction: column;
+}
+
+.movieTitle {
+  margin: 0;
+  font-size: 50px;
+  color: #333;
+  font-weight: bold;
+  line-height: normal;
+}
+
+.movieOverview {
+  font-size: 18px;
+}
+
+.releaseDate {
+  font-size: 20px;
+}
+
 .additionalInfo {
   padding: 16px;
-  background-color: #f8f9fa;
+  background-color: #f0ffff;
   border-radius: 8px;
+  margin-bottom: 16px;
 }
 
 .additionalInfo h3 {
