--- a/src/pages/MoviesPage/MoviesPage.module.css
+++ b/src/pages/MoviesPage/MoviesPage.module.css
@@ -1,4 +1,5 @@
-/*MoviesPage.module.css*/
+/*src/pages/MoviesPage/MoviesPage.module.css*/
+
 .container {
   padding: 16px;
 }
@@ -21,7 +22,7 @@
   border: none;
   border-radius: 4px;
   background-color: #007bff;
-  color: #fff;
+  color: #f0ffff;
   cursor: pointer;
 }
 
