--- a/src/components/MovieList/MovieList.module.css
+++ b/src/components/MovieList/MovieList.module.css
@@ -35,6 +35,7 @@
   border-radius: 8px;
   object-fit: cover;
   border: 1px solid #ccc;
+  margin-bottom: 8px;
 }
 
 .movieInfo {
@@ -47,9 +48,15 @@
   font-weight: bold;
   color: #333;
   margin: 0;
+  text-decoration: none;
 }
 
 .movieReleaseDate {
   color: #666;
   margin: 0;
+  text-decoration: none;
+}
+
+a {
+  text-decoration: none;
 }
