--- a/src/pages/MoviesPage/MoviesPage.module.css
+++ b/src/pages/MoviesPage/MoviesPage.module.css
@@ -1,31 +1,92 @@
-/*src/pages/MoviesPage/MoviesPage.module.css*/
-
+/* src/pages/MoviesPage/MoviesPage.module.css */
 .container {
-  padding: 16px 0;
+  display: flex;
+  flex-direction: column;
 }
 
-.form {
+.searchForm {
   display: flex;
-  gap: 8px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 16px;
   margin-bottom: 16px;
 }
 
-.input {
-  flex: 1;
-  padding: 8px;
+.searchInput {
+  padding: 10px;
+  font-size: 16px;
   border: 1px solid #ccc;
   border-radius: 4px;
+  width: 300px;
+  margin-right: 10px;
 }
 
-.button {
-  padding: 8px 16px;
+.searchButton {
+  padding: 10px 20px;
+  font-size: 16px;
   border: none;
   border-radius: 4px;
   background-color: #007bff;
-  color: #f0ffff;
+  color: white;
   cursor: pointer;
 }
 
-.button:hover {
+.searchButton:hover {
   background-color: #0056b3;
+}
+
+.list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  gap: 16px;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.item {
+  flex: 0 0 250px;
+  height: 450px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 16px;
+  border-radius: 8px;
+  background-color: #f0ffff;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.item:hover {
+  transform: scale(1.05);
+}
+
+.moviePoster {
+  width: 215px;
+  height: 325px;
+  border-radius: 8px;
+  object-fit: cover;
+  border: 1px solid #ccc;
+}
+
+.movieInfo {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.movieTitle {
+  font-weight: bold;
+  color: #333;
+  margin: 0;
+  text-decoration: none; /* Вимкнення підкреслення */
+}
+
+.movieReleaseDate {
+  color: #666;
+  margin: 0;
+  text-decoration: none; /* Вимкнення підкреслення */
 }
