--- a/src/components/MovieCast/MovieCast.module.css
+++ b/src/components/MovieCast/MovieCast.module.css
@@ -1,14 +1,9 @@
-/*src/components/MovieCact/MovieCast.module.css*/
-
 .cast {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding-top: 16px;
-  padding-bottom: 16px;
-  padding-left: 0;
-  padding-right: 0;
+  padding: 0;
 }
 
 .list {
