--- a/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
+++ b/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
@@ -1,5 +1,3 @@
-/*src/pages/MovieDetailsPage/MovieDetailsPage.module.css*/
-
 .container {
   display: flex;
   flex-direction: column;
@@ -55,6 +53,7 @@
   padding: 16px;
   background-color: #f0ffff;
   border-radius: 8px;
+  margin-bottom: 16px;
 }
 
 .additionalInfo h3 {
